[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-stripe-kong"
version = "0.1.0"
description = "A Django app for integrating Stripe payments and Kong API management"
readme = "README.md"
authors = [
    {name = "James Munsch", email = "james.munsch@ccsconsulting.rocks"},
]
license = {text = "MIT"}
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0.0",
    "djangorestframework>=3.14.0",
    "stripe>=7.0.0",
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/allen-munsch/django-stripe-kong"
"Bug Tracker" = "https://github.com/allen-munsch/django-stripe-kong/issues"